Fix #4143: Align buttons on splash page properly (#4241)
* Fix #4143: Aligned the buttons on splash page properly

* Fix #4143: Centered the splash buttons on all mobile devices

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -3750,6 +3750,7 @@ md-card.preview-conversation-skin-supplemental-card {
     padding-top: 80px;
   }
 }
+
 @media (max-width: 768px) {
   .oppia-splash-button-browse {
     left: 50%;
@@ -3775,6 +3776,21 @@ md-card.preview-conversation-skin-supplemental-card {
 
   .oppia-splash-section-two-content {
     padding-top: 160px;
+  }
+}
+
+@media (min-width: 575px) {
+  .oppia-splash-button {
+    left: -webkit-calc(130px + 15%);
+    left: -moz-calc(130px + 15%);
+    left: -o-calc(130px + 15%);
+    left: calc(130px + 15%);
+  }
+}
+
+@media (max-width: 365px) {
+  .oppia-splash-button {
+    min-width: 95%;
   }
 }
 
